--- a/views/index.html
+++ b/views/index.html
@@ -114,6 +114,7 @@
             </div>
           </div>
         </div>
+        <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
       </div>
     </div>
   </body>
